<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/fhaz"
        android:title="@string/fhaz"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/rhaz"
        android:title="@string/rhaz"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/mast"
        android:title="@string/mast"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/chemcam"
        android:title="@string/chemcam"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/mahli"
        android:title="@string/mahli"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/mardi"
        android:title="@string/mardi"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/navcam"
        android:title="@string/navcam"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/pancam"
        android:title="@string/pancam"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/minites"
        android:title="@string/minites"
        app:showAsAction="never">
    </item>

</menu>